yaml-manifests/simple-http-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-http-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-http-server
  template:
    metadata:
      labels:
        app: simple-http-server
    spec:
      containers:
      - name: simple-http-server
        image: ghcr.io/stormforge-software/simple-http-server:4631640521
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/app/application-secret/"
          name: application-secret
          readOnly: true
      volumes:
        - name: application-secret
          secret:
            secretName: application-secret
