yaml-manifests/simple-http-server-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simple-http-server-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-http-server-for-rollout
  template:
    metadata:
      labels:
        app: simple-http-server-for-rollout
    spec:
      containers:
      - name: simple-http-server
        image: ghcr.io/stormforge-software/simple-http-server:4631640521
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/app/application-secret/"
          name: application-secret
          readOnly: true
      volumes:
        - name: application-secret
          secret:
            secretName: application-secret
  strategy:
    blueGreen:
      activeService: simple-http-server-rollout-service
      previewService: simple-http-server-rollout-service-preview
      autoPromotionEnabled: false
